[tool.poetry]
name = "sound-merge"
version = "0.1.0"
description = ""
authors = ["XEas <mokeevgleb5@gmail.com>"]
readme = "README.md"
packages = [{include = "sound_merge", from = "src"}]

[tool.poetry.dependencies]
python = "^3.11"
logging = "^0.4.9.6"
pydub = "^0.25.1"
stempeg = "^0.2.3"
numpy = "1.26.4"
scipy = "^1.14.0"
matplotlib = "^3.9.0"
torchaudio = "^2.3.1"
pylint = "^3.2.6"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
